@@ -1,0 +1,1 @@
+<a href="https://tracking.packeta.com/?id={$trackingNumber}" target="_blank">{$trackingNumber}</a>
